test/errors/scope-resolution/duplicateEnumElement.compopts
--detailed-errors # duplicateEnumElement-detailed.good
--no-detailed-errors # duplicateEnumElement-brief.good
